--- a/src/lib/footer.scss
+++ b/src/lib/footer.scss
@@ -163,6 +163,7 @@ nav {
 	p {
 		margin: 0;
 		text-transform: lowercase;
+		text-align: right;
 		letter-spacing: 0;
 		font-weight: 200;
 		color: var(--footer-text-secondary);
